--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,5 +2,5 @@
 <h1>Home Page</h1>
 <%= image_tag 'home-office.jpg', size: "960x540"%>
 <br></br>
-<%= link_to 'About', about_path %>
+<%= link_to "Alpha Blog", articles_path %> | <%= link_to 'About', about_path %>
 </html>
