Create homepage and add links

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,5 @@
-<html>
-<h1>Home Page</h1>
-<%= image_tag 'home-office.jpg', size: "960x540"%>
-<br></br>
-<%= link_to "Alpha Blog", articles_path %> | <%= link_to 'About', about_path %>
-</html>
+<div class="center jumbotron">
+<h1>ALPHA BLOG</h1>
+<%= link_to "Sign up now", "#", class: "btn btn-danger btn-lrg btn-xlarge" %>
+</div>
+<!--<%= image_tag 'home-office.jpg', size: "960x540"%>-->
