style form partial

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <footer class="footer">
     <small>
-      Copyright &copy Frederick Vega;
+      Copyright &copy Frederick Vega
     </small>
     <nav>
       <ul>
