--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="center jumbotron">
 <h1>ALPHA BLOG</h1>
-<%= link_to "Sign up now", "#", class: "btn btn-danger btn-lrg btn-xlarge" %>
+<%= link_to "Sign up now", signup_path, class: "btn btn-danger btn-lrg btn-xlarge" %>
 </div>
 <!--<%= image_tag 'home-office.jpg', size: "960x540"%>-->
